--- a/MEDIUM_CLONE/index.html
+++ b/MEDIUM_CLONE/index.html
@@ -16,7 +16,7 @@
             <a href="#">Membership</a>
             <a href="#">Write</a>
             <a href="#">Sign In</a>
-            <a id="navLink" href="#">Get Started</a>
+            <a id="navLink" href="#">Get Started</a>//helo
     </div>
 </body>
 </html>
