--- a/schematic.html
+++ b/schematic.html
@@ -16,6 +16,7 @@
         <article>
             <h1>Article 1</h1>
             <p>This is the content of the first article.</p>
+            <p>This is the content of the first article.</p>
         </article>
         <article>
             <h1>Article 2</h1>
